--- a/2-3_데이터변환/3_데이터스케일링.ipynb
+++ b/2-3_데이터변환/3_데이터스케일링.ipynb
@@ -2,169 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "0                5.1               3.5                1.4               0.2\n",
-       "1                4.9               3.0                1.4               0.2\n",
-       "2                4.7               3.2                1.3               0.2\n",
-       "3                4.6               3.1                1.5               0.2\n",
-       "4                5.0               3.6                1.4               0.2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.900681</td>\n",
-       "      <td>1.019004</td>\n",
-       "      <td>-1.340227</td>\n",
-       "      <td>-1.315444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.143017</td>\n",
-       "      <td>-0.131979</td>\n",
-       "      <td>-1.340227</td>\n",
-       "      <td>-1.315444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.385353</td>\n",
-       "      <td>0.328414</td>\n",
-       "      <td>-1.397064</td>\n",
-       "      <td>-1.315444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.506521</td>\n",
-       "      <td>0.098217</td>\n",
-       "      <td>-1.283389</td>\n",
-       "      <td>-1.315444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-1.021849</td>\n",
-       "      <td>1.249201</td>\n",
-       "      <td>-1.340227</td>\n",
-       "      <td>-1.315444</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "0          -0.900681          1.019004          -1.340227         -1.315444\n",
-       "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
-       "2          -1.385353          0.328414          -1.397064         -1.315444\n",
-       "3          -1.506521          0.098217          -1.283389         -1.315444\n",
-       "4          -1.021849          1.249201          -1.340227         -1.315444"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 표준화(Standardization)\n",
     "\n",
@@ -186,7 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.datasets import load_iris \n",
+    "\n",
+    "iris = load_iris()\n",
+    "data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "\n",
+    "data_std_2 = (data - data.mean()) / data.std(ddof=0)\n",
+    "\n",
+    "data_std_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +122,108 @@
        "4          -1.021849          1.249201          -1.340227         -1.315444"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.datasets import load_iris \n",
+    "from sklearn.preprocessing import StandardScaler \n",
+    "\n",
+    "iris = load_iris() \n",
+    "data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "\n",
+    "std_scale = StandardScaler()\n",
+    "\n",
+    "data_std = std_scale.fit_transform(data)\n",
+    "data_std = pd.DataFrame(data_std, columns=iris.feature_names)\n",
+    "data_std.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.900681</td>\n",
+       "      <td>1.019004</td>\n",
+       "      <td>-1.340227</td>\n",
+       "      <td>-1.315444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.143017</td>\n",
+       "      <td>-0.131979</td>\n",
+       "      <td>-1.340227</td>\n",
+       "      <td>-1.315444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.385353</td>\n",
+       "      <td>0.328414</td>\n",
+       "      <td>-1.397064</td>\n",
+       "      <td>-1.315444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.506521</td>\n",
+       "      <td>0.098217</td>\n",
+       "      <td>-1.283389</td>\n",
+       "      <td>-1.315444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.021849</td>\n",
+       "      <td>1.249201</td>\n",
+       "      <td>-1.340227</td>\n",
+       "      <td>-1.315444</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0          -0.900681          1.019004          -1.340227         -1.315444\n",
+       "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
+       "2          -1.385353          0.328414          -1.397064         -1.315444\n",
+       "3          -1.506521          0.098217          -1.283389         -1.315444\n",
+       "4          -1.021849          1.249201          -1.340227         -1.315444"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,10 +232,209 @@
     "import pandas as pd \n",
     "from sklearn.datasets import load_iris \n",
     "\n",
-    "iris = load_iris()\n",
+    "iris = load_iris() \n",
     "data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
     "\n",
     "data_std_2 = (data - data.mean()) / data.std(ddof=0)\n",
+    "\n",
+    "data_std_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.050847</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.084746</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.194444</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0           0.222222          0.625000           0.067797          0.041667\n",
+       "1           0.166667          0.416667           0.067797          0.041667\n",
+       "2           0.111111          0.500000           0.050847          0.041667\n",
+       "3           0.083333          0.458333           0.084746          0.041667\n",
+       "4           0.194444          0.666667           0.067797          0.041667"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정규화(Normalization) \n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler \n",
+    "from sklearn.datasets import load_iris \n",
+    "\n",
+    "iris = load_iris()\n",
+    "data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "\n",
+    "mm_scale = MinMaxScaler()\n",
+    "\n",
+    "data_std = mm_scale.fit_transform(data)\n",
+    "data_std = pd.DataFrame(data_std, columns=iris.feature_names)\n",
+    "data_std.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.050847</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.084746</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.194444</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.067797</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0           0.222222          0.625000           0.067797          0.041667\n",
+       "1           0.166667          0.416667           0.067797          0.041667\n",
+       "2           0.111111          0.500000           0.050847          0.041667\n",
+       "3           0.083333          0.458333           0.084746          0.041667\n",
+       "4           0.194444          0.666667           0.067797          0.041667"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris \n",
+    "\n",
+    "iris = load_iris()\n",
+    "data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "\n",
+    "data_std_2 = (data - data.min()) / (data.max() - data.min())\n",
     "\n",
     "data_std_2.head()"
    ]
