--- a/2-3_데이터변환/3_데이터스케일링.ipynb
+++ b/2-3_데이터변환/3_데이터스케일링.ipynb
@@ -441,6 +441,205 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight    0.001\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam4 = pd.read_csv(\"../data/연습문제/Cars93.csv\") \n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "weight = exam4[[\"Weight\"]]\n",
+    "\n",
+    "mm_scale = MinMaxScaler() \n",
+    "data = mm_scale.fit_transform(weight)\n",
+    "weight_std = pd.DataFrame(data, columns=[\"Weight\"])\n",
+    "var_under = weight_std[weight_std < 0.5].var()\n",
+    "var_over = weight_std[weight_std > 0.5].var()\n",
+    "\n",
+    "diff = abs(var_under - var_over)\n",
+    "\n",
+    "result = round(diff, 3)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(93, 28)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam5 = pd.read_csv(\"../data/연습문제/Cars93.csv\") \n",
+    "\n",
+    "# 1\n",
+    "uniq_raw = exam5[[\"Manufacturer\", \"Origin\"]].drop_duplicates()\n",
+    "exam5.shape\n",
+    "# result1 = uniq_raw.shape[0]\n",
+    "\n",
+    "# # 2 \n",
+    "# exam5[\"sub_str\"] = exam5[\"Manufacturer\"].str[:2]\n",
+    "# print(exam5[\"sub_str\"])\n",
+    "# uniq_new = exam5[[\"sub_str\", \"Origin\"]].drop_duplicates()\n",
+    "# result2 = uniq_new.shape[0]\n",
+    "\n",
+    "# #\n",
+    "# result = result1 - result2\n",
+    "# print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Type     Man_trans_avail\n",
+       "Compact  No                   0.000000\n",
+       "         Yes                107.142857\n",
+       "Large    No                 127.272727\n",
+       "Midsize  No                  53.846154\n",
+       "         Yes                -62.500000\n",
+       "Small    Yes                 -5.000000\n",
+       "Sporty   Yes                107.692308\n",
+       "Van      No                  80.000000\n",
+       "         Yes                 33.333333\n",
+       "Name: RPM, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam6 = pd.read_csv(\"../data/연습문제/Cars93.csv\") \n",
+    "\n",
+    "count_gp = exam6.groupby([\"Type\", \"Man_trans_avail\"])[\"RPM\"].count()\n",
+    "sum_gp = exam6.groupby([\"Type\", \"Man_trans_avail\"])[\"RPM\"].sum()\n",
+    "median_gp = exam6.groupby([\"Type\", \"Man_trans_avail\"])[\"RPM\"].median()\n",
+    "\n",
+    "cal = median_gp - sum_gp / count_gp\n",
+    "cal\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.561\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam7 = pd.read_csv(\"../data/연습문제/Cars93.csv\") \n",
+    "\n",
+    "# 결측치 출력\n",
+    "# print(exam7[\"RPM\"].isnull().sum())\n",
+    "\n",
+    "# RPM 평균\n",
+    "avg = exam7[\"RPM\"].mean()\n",
+    "# print(avg)\n",
+    "\n",
+    "\n",
+    "exam7[\"RPM\"] = exam7[\"RPM\"].fillna(avg)\n",
+    "# 결측치 출력\n",
+    "# print(exam7[\"RPM\"].isnull().sum())\n",
+    "\n",
+    "\n",
+    "# RPM 표준화\n",
+    "RPM_std = (exam7[\"RPM\"] - exam7[\"RPM\"].mean() )/ exam7[\"RPM\"].std()\n",
+    "Wheelbase_std = (exam7[\"Wheelbase\"] - exam7[\"Wheelbase\"].mean() )/ exam7[\"Wheelbase\"].std()\n",
+    "\n",
+    "diff = Wheelbase_std * (-36) - RPM_std\n",
+    "\n",
+    "diff_sd = diff.std()\n",
+    "\n",
+    "result = round(diff_sd, 3)\n",
+    "\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "856.8380952380953"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam8 = pd.read_csv(\"../data/연습문제/Cars93.csv\") \n",
+    "\n",
+    "case1 = exam8.copy()\n",
+    "case2 = exam8.copy()\n",
+    "\n",
+    "#1. \n",
+    "avg = case1[\"Price\"].mean()\n",
+    "case1[\"Price\"] = case1[\"Price\"].fillna(avg)\n",
+    "\n",
+    "avg_max_min = case1[[\"Max_Price\", \"Min_Price\"]].mean(axis=1)\n",
+    "sub_case1 = case1[case1[\"Price\"] < avg_max_min]\n",
+    "sum_case1 = sub_case1.groupby(\"Origin\")[\"Price\"].sum()\n",
+    "\n",
+    "# 2. \n",
+    "med = case2[\"Price\"].median()\n",
+    "case2[\"Price\"] = case2[\"Price\"].fillna(med)\n",
+    "\n",
+    "q3 = exam8[\"Min_Price\"].quantile(.75)\n",
+    "\n",
+    "sub_case2 = case2[case2[\"Price\"] < q3]\n",
+    "sum_case2 = sub_case2.groupby(\"Origin\")[\"Price\"].sum()\n",
+    "\n",
+    "max_value = max(sum_case1 + sum_case2)\n",
+    "max_value\n",
+    "\n",
+    "max_value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
