--- a/2-3_데이터변환/3_데이터스케일링.ipynb
+++ b/2-3_데이터변환/3_데이터스케일링.ipynb
@@ -716,6 +716,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam11 = pd.read_csv(\"../data/연습문제/Rabbit.csv\") \n",
+    "\n",
+    "q2 = exam11[\"Dose\"].quantile()\n",
+    "q3 = exam11[\"Dose\"].quantile(.75)\n",
+    "\n",
+    "int(q3-q2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "medv\n",
+      "(20, 30]    207\n",
+      "(10, 20]    191\n",
+      "(30, 40]     53\n",
+      "(40, 50]     31\n",
+      "(0, 10]      24\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.9454)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam12 = pd.read_csv(\"../data/연습문제/Boston.csv\") \n",
+    "\n",
+    "exam12[\"medv\"].head()\n",
+    "# print(exam12[\"medv\"].min())\n",
+    "# print(exam12[\"medv\"].max())\n",
+    "\n",
+    "# pd.cut(exam12[\"medv\"], bins=5)\n",
+    "# pd.cut(exam12[\"medv\"], bins=[0, 10, 20, 30, 40, 50])\n",
+    "medv_cut = pd.cut(exam12[\"medv\"], bins=[0, 10, 20, 30, 40, 50])\n",
+    "\n",
+    "imsi = medv_cut.value_counts()\n",
+    "print(imsi)\n",
+    "mode = imsi.idxmax(axis=0)\n",
+    "\n",
+    "sub = exam12[\"dis\"][medv_cut == mode]\n",
+    "median = sub.median()\n",
+    "median\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(205, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.0027116534781066)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam13 = pd.read_csv(\"../data/연습문제/Melanoma.csv\") \n",
+    "\n",
+    "print(exam13.shape)\n",
+    "\n",
+    "df1 = exam13.iloc[:123]\n",
+    "df2 = exam13.iloc[123:]\n",
+    "\n",
+    "avg = df1[\"thickness\"].mean()\n",
+    "sd = df1[\"thickness\"].std()\n",
+    "\n",
+    "std1 = (df1[\"thickness\"] - avg) / sd\n",
+    "std2 = (df2[\"thickness\"] - avg) / sd\n",
+    "\n",
+    "std1.describe(), std2.describe()\n",
+    "\n",
+    "cond1 = (std1 >= -1) & (std1 <= 1)\n",
+    "cond2 = (std2 >= -1) & (std2 <= 1)\n",
+    "\n",
+    "med1 = std1[cond1].median()\n",
+    "med2 = std2[cond2].median()\n",
+    "\n",
+    "med1 + med2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
