--- a/2_연습문제.ipynb
+++ b/2_연습문제.ipynb
@@ -299,46 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     False\n",
-      "1     False\n",
-      "2     False\n",
-      "3     False\n",
-      "4     False\n",
-      "      ...  \n",
-      "88    False\n",
-      "89    False\n",
-      "90    False\n",
-      "91    False\n",
-      "92    False\n",
-      "Name: Make, Length: 93, dtype: bool\n",
-      "0     False\n",
-      "1     False\n",
-      "2      True\n",
-      "3     False\n",
-      "4      True\n",
-      "      ...  \n",
-      "88    False\n",
-      "89    False\n",
-      "90    False\n",
-      "91     True\n",
-      "92    False\n",
-      "Name: AirBags, Length: 93, dtype: bool\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,13 +317,153 @@
     "import pandas as pd \n",
     "exam10 = pd.read_csv(\"data/연습문제/Cars93.csv\") \n",
     "\n",
-    "cond1 = exam10[\"Make\"].str.startswith((\"Chevrolet\", \"Pontiac\", \"Hyundai\"))\n",
+    "# exam10[\"Make\"] = exam10[\"Make\"].str.strip()\n",
+    "\n",
+    "cond1 = exam10[\"Make\"].str.contains(\"Chevrolet|Pontiac|Hyundai\")\n",
     "cond2 = exam10[\"AirBags\"] == \"Driver only\"\n",
     "\n",
-    "print(cond1)\n",
-    "print(cond2)\n",
+    "# print(cond1)\n",
+    "# print(cond2)\n",
     "\n",
-    "sum(cond1 & cond2) "
+    "sum(cond1 & cond2) \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "62"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam11 = pd.read_csv(\"data/연습문제/Rabbit.csv\") \n",
+    "\n",
+    "exam11[\"Dose\"].head()\n",
+    "\n",
+    "q3 = exam11[\"Dose\"].quantile(0.75)\n",
+    "q2 = exam11[\"Dose\"].quantile()\n",
+    "\n",
+    "# print(q3)\n",
+    "# print(q2)\n",
+    "\n",
+    "result  = q3 - q2\n",
+    "print(int(result))\n",
+    "\n",
+    "import math \n",
+    "\n",
+    "math.floor(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9454\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.95)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam12 = pd.read_csv(\"data/연습문제/Boston.csv\") \n",
+    "\n",
+    "exam12[\"medv\"]\n",
+    "\n",
+    "# print(exam12[\"medv\"].min())\n",
+    "# print(exam12[\"medv\"].max())\n",
+    "\n",
+    "medv_cut = pd.cut(exam12[\"medv\"], bins=[0, 10, 20, 30, 40, 50])\n",
+    "imsi = medv_cut.value_counts()\n",
+    "\n",
+    "mode = imsi.idxmax()\n",
+    "\n",
+    "# print(medv_cut)\n",
+    "# print(mode)\n",
+    "\n",
+    "sub = exam12[\"dis\"][medv_cut == mode]\n",
+    "\n",
+    "median = sub.median()\n",
+    "print(median)\n",
+    "\n",
+    "round(median, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0027\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "exam13 = pd.read_csv(\"data/연습문제/Melanoma.csv\") \n",
+    "\n",
+    "exam13.shape\n",
+    "\n",
+    "df1 = exam13.iloc[:123]\n",
+    "df2 = exam13.iloc[123:]\n",
+    "\n",
+    "avg = df1[\"thickness\"].mean()\n",
+    "std = df1[\"thickness\"].std()\n",
+    "\n",
+    "std1 = (df1[\"thickness\"] - avg) / std\n",
+    "std2 = (df2[\"thickness\"] - avg) / std\n",
+    "\n",
+    "std1.describe(), std2.describe()\n",
+    "\n",
+    "cond1 = (std1 >= -1) & (std1 <= 1)\n",
+    "cond2 = (std2 >= -1) & (std2 <= 1)\n",
+    "\n",
+    "sub1 = std1[cond1]\n",
+    "sub2 = std2[cond2]\n",
+    "\n",
+    "\n",
+    "med1 = sub1.median()\n",
+    "med2 = sub2.median()\n",
+    "\n",
+    "result = round(med1 + med2, 4)\n",
+    "print(result)\n",
+    " \n"
    ]
   },
   {
